MiniUIProject3:Fonts and alignitem issue resolved

--- a/MiniProject2/assets/style.css
+++ b/MiniProject2/assets/style.css
@@ -7,12 +7,6 @@
 /* font settings */
 
 
-@font-face {
-    font-family: "Poppins";
-    src: url("./fonts/Poppins-Medium.ttf");
-}
-
-
 
 
 /* banner section start here */
@@ -934,7 +928,7 @@ section#Main .card-parent>.card {
 #navbar-section .bottom-nav-container {
     display: flex;
     justify-content: space-between;
-    text-align: center;
+    align-items: center;
     gap: 30px;
 }
 
